# scilayout

./: .gitignore  404.html  CONTRIBUTING.md  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: index.md
scilayout/: __init__.py  classes.py  grid.py  locations.py  scalebars.py  stats.py
search/: search_index.json
src/scilayout/: __init__.py  base.py  classes.py  grid.py  locations.py  types.py
tests/: __init__.py  test_grid.py  test_integration.py  test_locations.py  test_panellabels.py  teststyle.json  utils.py
