[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scilayout"
dynamic = ["version"]
authors = [{name = "George Stuyt"}]
description = "Create axes from top left of figure in centimetres to simplify scientific figure generation"
dependencies = ["matplotlib", "numpy"]
readme = "README.rst"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"] 
keywords = [
    "matplotlib-figures",
    "scientific-papers",
    "thesis-template",
    "matplotlib-styles",
    "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "Topic :: Scientific/Engineering :: Visualization"]

[project.urls]
Repository = "https://github.com/ogeesan/scilayout.git"
Issues = "https://github.com/ogeesan/scilayout/issues"
# homepage = 

[tool.setuptools.packages.find]
where = ["src"]
include = ["scilayout"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "scilayout.__version__"}